--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 # Environmental variables for bot
+#######################################################################################
+### IMPORTANT: THIS FILE CONTAINS SENSITIVE INFORMATION THAT SHOULD NOT BE READABLE ### 
+### TO ANYONE EXCEPT THE OWNER. #######################################################
+#######################################################################################
 discord_token="PUT DISCORD TOKEN HERE"
-rpc_url="http://patrola.me/api.php"
+rpc_url="PUT API URL HERE"
 command_prefix='!'
 logging_level=30
