Add client_id to .env

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 ### TO ANYONE EXCEPT THE OWNER. #######################################################
 #######################################################################################
 discord_token="PUT DISCORD TOKEN HERE"
+client_id="PUT CLIENT ID HERE"
 rpc_url="PUT API URL HERE"
 command_prefix='!'
 logging_level=30
