--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite_node_bot",
   "version": "1.0.0",
-  "description": "Vite Node Discord bo",
+  "description": "Vite Node Discord bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/ViNo-community/vite-node-bot#readme",
   "dependencies": {
-    "@vite/vitejs": "^2.3.14"
+    "@vite/vitejs": "^2.3.14",
+    "@vite/vitejs-http": "^2.3.14"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.4"
   }
 }
