--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/ViNo-community/vite-node-bot#readme",
   "dependencies": {
     "@vite/vitejs": "^2.3.14",
-    "@vite/vitejs-http": "^2.3.14"
+    "@vite/vitejs-http": "^2.3.14",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.4"
   }
 }
