--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@vite/vitejs": "^2.3.14",
     "@vite/vitejs-http": "^2.3.14",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "luxon": "^2.0.1"
   },
   "devDependencies": {
     "ts-node": "^10.1.0",
