Add !invite command

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@
 #RPC_NET='http://148.70.30.139:48132'
 RPC_NET=https://node-tokyo.vite.net/http
 SBP_NAME="ViNo_Community_Node"
+# For generating invite link
+CLIENT_ID = "PUT CLIENT ID FROM discord.com/developers HERE"
+PERMISSIONS = "PUT PERMISSION INTEGER HERE"
