--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Note: Normally you would want to keep this private as anyone who can see your mnemonic has access to your wallet
 # But this is only an example to demonstrate ViteJS functions
 # For SBP rewards
-#RPC_NET='http://148.70.30.139:48132'
-RPC_NET=https://node-tokyo.vite.net/http
+MAINNET=https://node-tokyo.vite.net/http
+TESTNET='https://buidl.vite.net/gvite:48132'
 SBP_NAME="ViNo_Community_Node"
 # For generating invite link
 CLIENT_ID = "PUT CLIENT ID FROM discord.com/developers HERE"
