--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@vite/vitejs": "^2.3.14",
     "@vite/vitejs-http": "^2.3.14",
     "dotenv": "^10.0.0",
-    "luxon": "^2.0.1"
+    "luxon": "^2.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "ts-node": "^10.1.0",
