--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vite/vitejs-http": "^2.3.14",
     "dotenv": "^10.0.0",
     "luxon": "^2.0.2",
+    "vitejs-notthomiz": "^2.3.15",
     "winston": "^3.3.3"
   },
   "devDependencies": {
