--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Vite Node Discord bot",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "dependencies": {
     "@vite/vitejs": "^2.3.14",
     "@vite/vitejs-http": "^2.3.14",
+    "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "luxon": "^2.0.2",
     "vitejs-notthomiz": "^2.3.15",
