Add build script to package.json

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Vite Node Discord bot",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "tsc && pm2 start dist/index.js",
     "start:dev": "tsc && node dist/index.js"
