--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean:dist": "rm -rf dist/*",
     "clean:node": "rm -rf node_modules",
     "clean": "npm run clean:dist && npm run clean:node",
+    "start": "npm run start:dev",
     "start:prod": "tsc && pm2 start dist/index.js",
     "start:dev": "tsc && node dist/index.js"
   },
