Add name of process for pm2

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean:node": "rm -rf node_modules",
     "clean": "npm run clean:dist && npm run clean:node",
     "start": "npm run start:dev",
-    "start:prod": "tsc && pm2 start dist/index.js",
+    "start:prod": "tsc && pm2 start dist/index.js --name \"Vite Node Bot\"",
     "start:dev": "tsc && node dist/index.js"
   },
   "repository": {
