--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "esModuleInterop": true,
         "target": "es5",
+        "downlevelIteration": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
